# rust-practical-networked-applications

./: .gitignore  Cargo.toml  README.md
.github/: codecov.yml
.github/workflows/: audit.yml  benchmark.yml  checks.yml
.hooks/: pre-commit
benches/: benches.rs  engines.rs  servers.rs
src/: errors.rs  lib.rs  shared.rs
src/client/: mod.rs
src/engines/: kvs.rs  mod.rs  sled.rs
src/serde/: bincode.rs  mod.rs
src/server/: mod.rs  spawned_listener.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
tests/: cli.rs  compaction.rs  kv_store.rs  server.rs  tests.rs  thread_pool.rs
tests/common/: mod.rs
