[package]
name = "kvs"
version = "0.2.0"
authors = ["Jamrok <jamrok@users.noreply.github.com>"]
edition = "2021"
description = "A persistent key/value store that can be accessed from the command line"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.2.7", features = ["derive"] }
derive_more = "0.99"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.5"
walkdir = "2.3"