[package]
name = "kvs"
version = "0.4.0"
authors = ["Jamrok <jamrok@users.noreply.github.com>"]
edition = "2021"
description = "A persistent key/value store that can be accessed from the command line"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.2.7", features = ["derive"] }
derive_more = "0.99"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
crossbeam-utils = "0.8"
fake = "2.6"
panic-control = "0.1"
predicates = "3.0"
rand = "0.8"
tempfile = "3.5"
walkdir = "2.3"

[[bench]]
name = "benches"
harness = false
