[package]
name = "kvs"
version = "0.4.0"
authors = ["Jamrok <jamrok@users.noreply.github.com>"]
edition = "2021"
description = "A persistent key/value store that can be accessed from the command line"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.3", features = ["derive"] }
crossbeam = "0.8"
crossbeam-utils = "0.8"
dashmap = "5.5"
derive_more = "0.99"
glob = "0.3"
num_cpus = "1.16"
once_cell = "1.18"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
fake = "2.6"
panic-control = "0.1"
predicates = "3.0"
rand = "0.8"
tempfile = "3.5"
walkdir = "2.3"

[[bench]]
name = "engines"
harness = false

[[bench]]
name = "servers"
harness = false
